fixed button alignment

--- a/style.css
+++ b/style.css
@@ -16,13 +16,6 @@ html {
     transform: translate(-50%, -50%);
 }
 
-.special-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
 .display-container {
     background-color: white;
     color: black;
@@ -39,17 +32,25 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.button-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 5px red;
+.empty-button {
+    width: 75px;
+    height: 37px;
+    margin: 10px;
+    border: transparent;
+    background-color: transparent;
+    color: white;
 }
 
-.calculator-row {
+.button-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.calculator-column {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -70,7 +71,6 @@ html {
     width: 75px;
     height: 37px;
     margin: 10px;
-    margin-right: 0%;
     font-size: 25px;
     border-radius: 5px;
     border: none;
